[project]
name = "asok"
version = "0.1.3"
description = "A minimalist, zero-dependency Python web framework."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name="Mpia M.", email="asok-framework@outlook.com" },
  { name="Asok Maintainers" },
]
keywords = ["web", "framework", "zero-dependency", "minimalist", "orm", "wsgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",

    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[project.urls]
Homepage = "https://github.com/asok-framework/asok"
Repository = "https://github.com/asok-framework/asok"
Issues = "https://github.com/asok-framework/asok/issues"

[project.scripts]
asok = "asok.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["asok*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
asok = [
    "assets/*.svg", 
    "admin/templates/*.html", 
    "admin/static/*",
    "api/templates/*.html",
    "api/static/*"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # flake8, pyflakes, isort
ignore = ["E501"] # Ignore line length enforcement since we have a soft limit

