[project]
name = "asok"
version = "0.1.7"
description = "A minimalist Python web framework with minimal external dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name="Mpia Mimpiya PULUDISU", email="asok-framework@outlook.com" },
  { name="Asok Maintainers" },
]
keywords = ["web", "framework", "minimalist", "orm", "wsgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[project.optional-dependencies]
postgres = ["psycopg>=3.0.0"]
mysql = ["pymysql>=1.1.0"]
redis = ["redis>=5.0.0"]
s3 = ["boto3>=1.34.0"]
async = [
    "uvicorn>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/asok-framework/asok"
Repository = "https://github.com/asok-framework/asok"
Issues = "https://github.com/asok-framework/asok/issues"

[project.scripts]
asok = "asok.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["asok*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
asok = [
    "assets/*.svg",
    "admin/templates/*.html",
    "admin/static/*.min.js",
    "admin/static/*.min.css",
    "admin/static/*.svg",
    "api/templates/*.html",
    "api/static/*.min.js",
    "api/static/*.min.css",
    "api/static/*.svg",
    "toolbar/static/*.min.js",
    "toolbar/static/*.min.css",
    "toolbar/templates/*",
    "core/assets/*.min.js",
    "core/assets/*.min.css"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # flake8, pyflakes, isort
ignore = ["E501"] # Ignore line length enforcement since we have a soft limit

